--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -457,3 +457,15 @@ html .clear-completed:active {
     font-size: 13px;
     color: gray;
 }
+
+.edit-input {    
+    height: 53px;
+    width: 98.6%;
+    box-shadow: inset 0px 0px 3px 2px rgba(43, 43, 43, 0.2);
+    word-break: break-all;
+    display: block;
+    line-height: 1.2;
+    transition: color 0.4s;
+    font-weight: 400;
+    font-size: 24px;
+}
